Switch to anyhow

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+anyhow = "1.0.98"
 itertools = "0.14.0"
 tokio = { version = "1.46.1", features = ["full"] }
 windows = { version = "0.61.3", features = ["Data_Xml_Dom", "Media_Control", "UI_Notifications", "Win32"] }
