--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 anyhow = "1.0.98"
 itertools = "0.14.0"
 tokio = { version = "1.46.1", features = ["full"] }
-windows = { version = "0.61.3", features = ["Data_Xml_Dom", "Media_Control", "UI_Notifications", "Win32"] }
+windows = { version = "0.61.3", features = ["Data_Xml_Dom", "Media_Control", "UI_Notifications", "Win32", "Win32_Storage_Packaging_Appx"] }
 windows-future = "0.2.1"
 windows-result = "0.3.4"
+windows-strings = "0.4.2"
