--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,11 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
+clap = { version = "4.5.41", features = ["derive"] }
 itertools = "0.14.0"
+serde = "1.0.219"
+serde_derive = "1.0.219"
+serde_json = "1.0.140"
 tempfile = "3.20.0"
 tokio = { version = "1.46.1", features = ["full"] }
 windows = { version = "0.61.3", features = ["Data_Xml_Dom", "Foundation_Collections", "Graphics_Imaging", "Media_Control", "Storage_Streams", "UI_Notifications", "Win32", "Win32_Storage_Packaging_Appx", "Win32_System_WinRT"] }
