--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ serde_derive = "1.0.219"
 serde_json = "1.0.140"
 tempfile = "3.20.0"
 tokio = { version = "1.46.1", features = ["full"] }
-windows = { version = "0.61.3", features = ["Data_Xml_Dom", "Foundation_Collections", "Graphics_Imaging", "Media_Control", "Storage_Streams", "UI_Notifications", "Win32", "Win32_Storage_Packaging_Appx", "Win32_System_WinRT"] }
+windows = { version = "0.61.3", features = ["Data_Xml_Dom", "Foundation_Collections", "Graphics_Imaging", "Media_Control", "Storage_Streams", "UI_Notifications", "Win32", "Win32_Graphics_Gdi", "Win32_Storage_Packaging_Appx", "Win32_System_LibraryLoader", "Win32_System_WinRT", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
 windows-future = "0.2.1"
 windows-result = "0.3.4"
 windows-strings = "0.4.2"
