--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ winres = "0.1.12"
 [dependencies]
 anyhow = "1.0.98"
 clap = { version = "4.5.41", features = ["derive"] }
+directories = "6.0.0"
 itertools = "0.14.0"
 serde = "1.0.219"
 serde_derive = "1.0.219"
